# Angel-Foods-Arch

./: main.py  pyproject.toml  streamlit.py
.devcontainer/: devcontainer.json
fastapi/: Angel.csv  utils.py
fastapi/.streamlit/: secrets.toml
fastapi/db/: chroma.sqlite3
