[tool.poetry]
name = "ai-fastapi-architecture"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<=3.13"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.31.0"}
streamlit = "^1.39.0"
sql = "^2022.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
